Resolve safari bug on mobile hours listing.

--- a/src/scss/components/_hours.scss
+++ b/src/scss/components/_hours.scss
@@ -398,7 +398,6 @@
           flex-grow: 1;
           padding: 11px 29px;
           border-right: 1px solid $gray-1;
-          height: 100%;
           position: relative;
           background-color: $white;
           align-items: flex-end;
